--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USERNAME=enter_your_db_username
-DB_PASSWORD=db_password
-DB_NAME=db_name
-HOST=host_address
-PORT=port_number
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_NAME=fastapi
+HOST=localhost
+PORT=5432
